@@ -1,0 +1,3 @@
+class Tag < ActiveRecord::Base
+  validates_length_of :name, :maximum => 30
+end
