@@ -1,3 +1,4 @@
+RAILS_FRAMEWORK_ROOT = "/home/aaron/Projects/Third Party/rails"
 # Load the plugin testing framework
 $:.unshift("#{File.dirname(__FILE__)}/../../plugin_test_helper/lib")
 require 'rubygems'
